GNOME Bugzilla – Bug 650970
mpeg2enc: fix build with mjpegtools 2.0
Last modified: 2011-05-25 13:53:13 UTC
Created attachment 188460 [details] [review] fix includes for mjpegtools 2.0 gstreamer's mpeg2enc element needs a small patch to make it build with mjpegtools 2.0.0.
Looks good. commit 407b02578689804dc6bc47e53be9e87cc1b25597 Author: Götz Waschk <waschk@mandriva.org> Date: Tue May 24 15:42:44 2011 +0200 mpeg2enc: support mjpegtools 2.0 This adds conditional includes for the renamed headers in mjpegtools 2.0. Fixes: #650970.
This broke things for me with 1.9.0: commit 202a5480307de3d02a93dc0bd4e91c3dc3572037 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Wed May 25 14:42:38 2011 +0100 mpeg2enc: fix build with 1.9.0 release again after recent fixes for mjpegtools 2.0.0 https://bugzilla.gnome.org/show_bug.cgi?id=650970
Thanks, I must admit that I hadn't tested with 1.9.x anymore.