mpeg2enc: fix build with 1.9.0 release again after recent fixes for mjpegtools 2.0.0

https://bugzilla.gnome.org/show_bug.cgi?id=650970